test/asm/invalid-opt.asm
opt b123
opt g12345
opt b_1
opt b10
opt g012_
opt g$123
opt pxy
opt p1234
opt Qxy
opt Q1234
opt Q32
opt r99999999999999999999999999
opt W
opt
popo
